--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An HTTP client based on the Fetch API.",
   "main": "dist/index.js",
   "scripts": {
-    "build": "npm run lint && npm run build-ts && npm run build-rollup && npm run build-dts && rimraf .cache",
+    "build": "npm run build-ts && npm run build-rollup && npm run build-dts && rimraf .cache",
     "build-ts": "rimraf .cache && tsc -p tsconfig.json --outDir .cache",
     "build-rollup": "rimraf dist && rollup -c scripts/rollup.config.js  -i .cache/src/index.js",
     "build-dts": "api-extractor run --local --typescript-compiler-folder \"node_modules/typescript\"",
@@ -28,13 +28,13 @@
   },
   "homepage": "https://github.com/xunmi1/http-client#readme",
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.9.10",
+    "@microsoft/api-extractor": "^7.9.11",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@xunmi/prettier-config": "^1.0.1",
     "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.26.5",
+    "rollup": "^2.26.6",
     "rollup-plugin-terser": "^7.0.0",
     "typescript": "^4.0.2"
   },
