--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@types/jest": "^26.0.13",
     "@xunmi/prettier-config": "^1.0.1",
+    "husky": "^4.2.5",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^26.4.2",
     "nock": "^13.0.4",
@@ -49,5 +50,10 @@
     "ts-jest": "^26.3.0",
     "typescript": "^4.0.2"
   },
-  "prettier": "@xunmi/prettier-config"
+  "prettier": "@xunmi/prettier-config",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  }
 }
