--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@types/jest": "^26.0.13",
     "@xunmi/prettier-config": "^1.0.1",
+    "cross-fetch": "^3.0.5",
     "husky": "^4.2.5",
-    "isomorphic-fetch": "^2.2.1",
     "jest": "^26.4.2",
     "nock": "^13.0.4",
     "prettier": "^2.1.1",
