--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@types/jest": "^26.0.13",
+    "@types/node": "^14.10.1",
     "@xunmi/prettier-config": "^1.0.1",
     "cross-fetch": "^3.0.6",
     "husky": "^4.3.0",
