--- a/package.json
+++ b/package.json
@@ -34,27 +34,30 @@
   },
   "homepage": "https://github.com/xunmi1/http-client#readme",
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.9.15",
+    "@microsoft/api-extractor": "^7.9.19",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "@types/jest": "^26.0.13",
+    "@types/jest": "^26.0.14",
     "@types/node": "^14.10.1",
     "@xunmi/prettier-config": "^1.0.1",
     "cross-fetch": "^3.0.6",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
     "nock": "^13.0.4",
-    "prettier": "^2.1.1",
+    "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.26.10",
+    "rollup": "^2.27.1",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^26.3.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.3"
   },
   "prettier": "@xunmi/prettier-config",
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint"
     }
+  },
+  "engines": {
+    "node": ">=10"
   }
 }
