--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build-rollup": "rimraf dist && rollup -c scripts/rollup.config.js  -i .cache/src/index.js",
     "build-dts": "api-extractor run --local --typescript-compiler-folder \"node_modules/typescript\"",
     "test": "rimraf coverage && jest --runInBand --logHeapUsage",
-    "lint": "prettier --write --parser typescript \"**/*.ts\"",
+    "lint": "eslint \"{src,test}/**/*.ts\" --fix",
     "release": "npm test && npm run build && npm publish"
   },
   "repository": {
@@ -26,8 +26,11 @@
   "sideEffects": false,
   "keywords": [
     "fetch",
+    "request",
     "http",
-    "request"
+    "https",
+    "ajax",
+    "xhr"
   ],
   "bugs": {
     "url": "https://github.com/xunmi1/http-client/issues"
@@ -39,8 +42,13 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.10.1",
-    "@xunmi/prettier-config": "^1.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
+    "@xunmi/prettier-config": "^1.0.2",
     "cross-fetch": "^3.0.6",
+    "eslint": "^7.9.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
     "nock": "^13.0.4",
@@ -48,10 +56,9 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.27.1",
     "rollup-plugin-terser": "^7.0.2",
-    "ts-jest": "^26.3.0",
+    "ts-jest": "^26.4.0",
     "typescript": "^4.0.3"
   },
-  "prettier": "@xunmi/prettier-config",
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint"
