--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@xunmi/http-client",
   "version": "0.1.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "description": "An HTTP client based on the Fetch API.",
   "main": "dist/http-client.umd.js",
   "module": "dist/http-client.esm.js",
@@ -15,6 +18,7 @@
     "build-dts": "api-extractor run --local --typescript-compiler-folder \"node_modules/typescript\"",
     "test": "rimraf coverage && jest --runInBand --logHeapUsage",
     "lint": "eslint \"{src,test}/**/*.ts\" --fix",
+    "format": "prettier \"**/*\" --ignore-unknown --write --ignore-path \"./.gitignore\"",
     "release": "npm test && npm run build && npm publish"
   },
   "repository": {
@@ -37,13 +41,12 @@
   },
   "homepage": "https://github.com/xunmi1/http-client#readme",
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.9.19",
+    "@microsoft/api-extractor": "^7.9.22",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@types/jest": "^26.0.14",
-    "@types/node": "^14.10.1",
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
     "@xunmi/prettier-config": "^1.0.2",
     "cross-fetch": "^3.0.6",
     "eslint": "^7.9.0",
@@ -54,7 +57,7 @@
     "nock": "^13.0.4",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.27.1",
+    "rollup": "^2.28.1",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^26.4.0",
     "typescript": "^4.0.3"
@@ -64,6 +67,7 @@
       "pre-commit": "npm run lint"
     }
   },
+  "prettier": "@xunmi/prettier-config",
   "engines": {
     "node": ">=10"
   }
