--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,29 +5,35 @@ name: CI
 
 on:
   push:
-    branches: [master]
+    branches: [ master ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [ 10, 12, 14 ]
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Use Node.js
-        uses: actions/setup-node@v1
+      - name: Setup Node.js v${{ matrix.node }}
+        uses: actions/setup-node@v2
         with:
-          node-version: '12.x'
+          node-version: ${{ matrix.node }}
+          check-latest: true
 
-      - name: Cache modules
+      - name: Cache node modules
         uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
         with:
           # npm cache files are stored in `~/.npm` on Linux/macOS
           # not recommended to cache `node_modules`, as it can break across Node versions
           path: ~/.npm
-          key: ${{ runner.OS }}-node-${{ hashFiles('**/package.json') }}
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}
           restore-keys: |
-            ${{ runner.OS }}-node-
+            ${{ runner.os }}-build-${{ env.cache-name }}-
 
       - name: Install dependencies
         run: npm install
