types: modify type of the request method and test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "esModuleInterop": true,
     "strictPropertyInitialization": false,
     "suppressImplicitAnyIndexErrors": true,
+    "skipLibCheck": true,
     "declaration": true,
     "sourceMap": false,
     "baseUrl": "./",
